Prepare license choice GCI task.

By happy coincidence this fixes
BUG: 299187